--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">My1</string>
+    <string name="hello">Hello</string>
+    <string name="name">Name</string>
+    <string name="enter">enter</string>
 </resources>
