--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hello">Hello</string>
     <string name="name">Name</string>
     <string name="enter">enter</string>
+    <string name="name">Name</string>
+    <string name="enter">enter</string>
 </resources>
