--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="enter">enter</string>
     <string name="name">Name</string>
     <string name="enter">enter</string>
+    <string name="checkbox">CheckBox</string>
 </resources>
