--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="name">Name</string>
     <string name="enter">enter</string>
     <string name="checkbox">CheckBox</string>
+    <string name="togglebutton">ToggleButton</string>
 </resources>
